<resources>
    <string name="app_name">Programming Key Points</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="matric">Matric Number</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="newAccount">New Account</string>
    <string name="open">Drawer Opened</string>
    <string name="close">Drawer Closed</string>
    <string name="welcome">Hello!</string>

    <string name="home">Home</string>
    <string name="books">Materials</string>
    <string name="keys">Key Points</string>
    <string name="login">Login</string>
    <string name="contact">Feedback</string>
    <string name="profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="others">  Others</string>
    <string name="about">About App</string>
    <string name="policy">Privacy Policy</string>
    <string name="logout">Logout</string>

    <string name="makeRequest">Make Request</string>
    <string name="welcomeText">Please note that the settings is directly proportional to the key points and the material you would be shown. The settings can be changed at any time. Happy Reading!</string>
    <string name="text">Thanks For using our service. We promise to always meet your requirement.</string>

    <string name="lorem">On Demand Car Wash provide quick and fast car washing service and it is
        best of its kind! Our goal is to always meet your requrement anyday any time.
        Welcome to using Our Service.
    </string>

    <string name="start">Start Reading</string>
    <string name="continueReading">Continue Reading</string>

    <string name="ourPolicy">
        Our Policy is so user friendly and it so convinient for all our customers
    </string>
    <string name="aboutUs">Programming languages Key Points is an application implemented on Android Platform.
        This application is a final year project carried out by Adebanjo Ridwan Ayodeji of matric number 14/69/0016 under the supervision of the department Mr Biodun Orunsolu.</string>
</resources>
